[gd_scene load_steps=8 format=3 uid="uid://b5qe5dodc03ci"]

[ext_resource type="Script" path="res://scripts/main_scene.gd" id="1_e0u2x"]
[ext_resource type="Texture2D" uid="uid://bup65ag3sr3xy" path="res://assets/CardBack.png" id="2_ij5oj"]
[ext_resource type="Texture2D" uid="uid://qbqyrmu31eac" path="res://assets/Background.png" id="2_nbbla"]

[sub_resource type="Animation" id="Animation_jxwk0"]
resource_name = "CardDraw"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(288, 0)]
}

[sub_resource type="Animation" id="Animation_3wwir"]
resource_name = "CardFlip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_hgsie"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(288, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardTexture:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ugusy"]
_data = {
"CardDraw": SubResource("Animation_jxwk0"),
"CardFlip": SubResource("Animation_3wwir"),
"RESET": SubResource("Animation_hgsie")
}

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_e0u2x")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 641.0
offset_bottom = 358.0
texture = ExtResource("2_nbbla")

[node name="CardTexture" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 288.0
offset_right = 352.0
offset_bottom = 96.0
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="CardTitle" type="Label" parent="."]
layout_mode = 1
offset_left = 245.0
offset_top = 106.0
offset_right = 395.0
offset_bottom = 151.0
horizontal_alignment = 1

[node name="DrawCardButton" type="Button" parent="."]
layout_mode = 0
offset_top = 1.0
offset_right = 72.0
offset_bottom = 105.0
icon = ExtResource("2_ij5oj")

[node name="ChoicesContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 281.0
offset_right = 336.0
offset_bottom = 318.0

[node name="ChoiceButton1" type="Button" parent="ChoicesContainer"]
layout_mode = 2

[node name="ChoiceButton2" type="Button" parent="ChoicesContainer"]
layout_mode = 2

[node name="CardStory" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 136.0
offset_right = 636.0
offset_bottom = 240.0

[node name="FinalChoiceContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 200.0
offset_right = 341.0
offset_bottom = 240.0

[node name="CardAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ugusy")
}

[connection signal="pressed" from="DrawCardButton" to="." method="_on_draw_card_button_pressed"]
